--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,15 @@ services:
       - .:/code
     ports:
       - "8000:8000"
-    # depends_on: 
-    #   - db
-#   db:
-#     image: postgres:11
-#     environment:
-#       - POSTGRES_DB=postgres
-#       - POSTGRES_USER=postgres
-#       - POSTGRES_PASSWORD=postgres
-#     volumes:
-#       - postgres_data:/var/lib/postgresql/data/
+    depends_on: 
+      - db
+  db:
+    image: postgres
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    # volumes:
+      # - postgres_data:/var/lib/postgresql/data/
 # volumes:
-#   postgres_data:
+  # postgres_data:
