--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework-simplejwt = "^4.8.0"
 gunicorn = "^20.1.0"
 whitenoise = "^5.3.0"
 django-environ = "^0.7.0"
+jwt = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^21.9b0", allow-prereleases = true}
