--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.4.1; python_version >= "3.6"
+cffi==1.14.6; python_version >= "3.6"
+cryptography==3.4.8; python_version >= "3.6"
 django-environ==0.7.0; python_version >= "3.4" and python_version < "4"
 django==3.2.7; python_version >= "3.6"
 djangorestframework-simplejwt==4.8.0; python_version >= "3.7"
 djangorestframework==3.12.4; python_version >= "3.5"
 gunicorn==20.1.0; python_version >= "3.5"
+jwt==1.2.0; python_version >= "3.6"
 psycopg2-binary==2.9.1; python_version >= "3.6"
+pycparser==2.20; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pyjwt==2.1.0; python_version >= "3.7"
 pytz==2021.1; python_version >= "3.6"
 sqlparse==0.4.2; python_version >= "3.6"
